--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/xiaoleGun/android_kernel_xiaomi_wayne-4.19
-KERNEL_SOURCE_BRANCH=twrp-12
-KERNEL_CONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_motorola_sm8250
+KERNEL_SOURCE_BRANCH=lineage-20
+KERNEL_CONFIG=arch/arm64/configs/vendor/lineageos_nio_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -60,4 +60,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+SOURCE_BOOT_IMAGE=https://get.libremobileos.com/builds/full/nio/20240206/boot.img
