--- a/config.env
+++ b/config.env
@@ -2,7 +2,7 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_motorola_sm8250
 KERNEL_SOURCE_BRANCH=lineage-20
-KERNEL_CONFIG=build.config.common
+KERNEL_CONFIG=build.config.aarch64
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
