--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_motorola_sm8250
-KERNEL_SOURCE_BRANCH=lineage-20
-KERNEL_CONFIG=./arch/arm64/configs/defconfig
+KERNEL_SOURCE_BRANCH=lineage-21
+KERNEL_CONFIG=kernel/arch/arm64/configs/defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
 ADD_LOCALVERSION_TO_FILENAME=false
@@ -61,4 +61,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=true
-SOURCE_BOOT_IMAGE=https://get.libremobileos.com/builds/full/nio/20240206/boot.img
+SOURCE_BOOT_IMAGE=https://mirrorbits.lineageos.org/full/nio/20240318/boot.img
