--- a/config.env
+++ b/config.env
@@ -2,7 +2,9 @@ CONFIG_ENV=config.env
 
 KERNEL_SOURCE=https://github.com/LineageOS/android_kernel_motorola_sm8250
 KERNEL_SOURCE_BRANCH=lineage-21
-KERNEL_CONFIG=arch/arm64/configs/vendor/ext_config/nio-default.config
+KERNEL_CONFIG=defconfig.mk
+
+# arch/arm64/configs/vendor/ext_config/nio-default.config
 # kernel/arch/arm64/configs/defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
